# RoboticsLab

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json  setup-ros.sh
ros_ws/src/lampo_description/: CMakeLists.txt  package.xml  setup.py
ros_ws/src/lampo_description/config/: bridge.yaml  nav2_params_omni.yaml  nav2_params_omni_1.yaml  ur_controllers.yaml
ros_ws/src/lampo_description/lampo_description/: nodo_prova.py  twist_repub.py
ros_ws/src/lampo_description/launch/: lampo_gz_mm.launch.py  lampo_joy.launch.py  lampo_nav_omni.launch.py  lampo_sandbox.launch.py
ros_ws/src/lampo_description/rviz/: config.rviz
ros_ws/src/lampo_description/urdf/: mm_arm.xacro  mm_camera.xacro  mm_gripper.xacro  system.urdf.xacro
ros_ws/src/lampo_description/urdf/sweepee/: sweepee_omni.xacro
ros_ws/src/lampo_description/worlds/: warehouse.sdf
